fix: replace svg image with png as photo frame background for proper display on IOS

--- a/src/components/UI/photo-frame/photo-frame.module.scss
+++ b/src/components/UI/photo-frame/photo-frame.module.scss
@@ -5,7 +5,7 @@
     position: relative;
     width: 100%;
     height: 100%;
-    background: center/cover no-repeat url(../../../assets/images/phone-frame-light.svg);
+    background: center/cover no-repeat url(../../../assets/images/frame.png);
 
     &_plain {
         @extend .photo-frame;
